compiler/testData/cli/jvm/noReflect.out
compiler/testData/cli/jvm/noReflect.kt:4:19: error: unresolved reference 'primaryConstructor'.
    String::class.primaryConstructor
                  ^
COMPILATION_ERROR
